# GuessHowMuch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sessions.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/client/Application/: AIController.cpp  AIController.h  Application.cpp  Application.h  CMakeLists.txt  Controller.cpp  Controller.h  Session.cpp  Session.h  UserController.cpp  UserController.h
src/lib/: CMakeLists.txt
src/lib/Application/: Application.cpp  Application.h  CMakeLists.txt  Option.cpp  Option.h  OptionParser.cpp  OptionParser.h
src/lib/Base/: CMakeLists.txt  Error.cpp  Error.h  Parser.h  ParserBoolean.cpp  ParserBoolean.h  ParserInteger.cpp  ParserInteger.h  ParserInterval.cpp  ParserInterval.h  ParserString.cpp  ParserString.h
src/lib/Math/: CMakeLists.txt  Range.cpp  Range.h
src/server/: CMakeLists.txt  main.cpp
src/server/Application/: Application.cpp  Application.h  CMakeLists.txt  Session.cpp  Session.h
src/shared/: CMakeLists.txt  Command.h  Status.h
src/shared/Session/: Command.cpp  Command.h  Status.cpp  Status.h
